--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -1,6 +1,14 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:300,400,500,700');
+
+@tailwind base;
+
+@tailwind components;
+
+@tailwind utilities;
+
 body {
   font-family: 'Roboto';
+  background-color: #F5F7FB;
 }
 
 .video-responsive {
@@ -57,11 +65,16 @@ body {
 }
 
 .navbar-default .navbar-toggle .icon-bar {
-  background-color: #fff !important;
+  background-color: #ddd !important;
+}
+
+.navbar-default .navbar-toggle:hover .icon-bar {
+  background-color: white !important;
 }
 
 .navbar-default .navbar-toggle:focus, .navbar-default .navbar-toggle:hover {
-  background-color: #542683;
+  background-color: black;
+  border-color: black;
 }
 
 .headerWrapper {
@@ -159,17 +172,17 @@ body {
 
 /* Header section starts here */
 .navBarDefault {
-  background-color: #372476;
+  background-color: #F5F7FB;
   border-radius: 0;
   border-top: 0;
   margin-bottom: 0;
   border: 0;
   display: flex;
   align-items: center;
-  box-shadow: -1px 0px 4px 1px rgba(175,158,232,.4);
+  /* box-shadow: -1px 0px 4px 1px rgba(175,158,232,.4);
   -webkit-box-shadow: -1px 0px 4px 1px rgba(175,158,232,.4);
   -moz-box-shadow: -1px 0px 4px 1px rgba(175,158,232,.8);
-  -o-box-shadow: -1px 0px 4px 1px rgba(175,158,232,.4);
+  -o-box-shadow: -1px 0px 4px 1px rgba(175,158,232,.4); */
   z-index: 1;
   padding: 15px;
 }
@@ -182,7 +195,7 @@ body {
   font-size: 28px;
   line-height: 1.5;
   font-weight: 500;
-  color: #fff !important;
+  color: #344abd !important;
   padding: 0px 0px;
   display: flex;
   align-items: center;
@@ -242,14 +255,14 @@ pre {
 .headerNav {
   font-family: 'Roboto';
   padding: 0px 24px;
-  color: rgb(116, 76, 188);
+  color: #344abd;
   font-size: 16px;
   font-weight: 500;
   line-height: 1em;
 }
 
 .headerNav a {
-  color: rgb(116, 76, 188);
+  color: #344abd;
   text-decoration: none;
 }
 
@@ -271,7 +284,7 @@ pre {
 }
 
 .sideBarUL li a {
-  color: #fff;
+  color: #76787C;
   font-size: 14px;
   font-weight: 500;
   line-height: 1.5;
@@ -290,8 +303,8 @@ pre {
   text-transform: uppercase;
   letter-spacing: 1.2px;
   padding: 7px 24px 7px 16px;
-  border-left: 1px solid #e6ecf1;
-  border-left-color: rgb(230, 236, 241);
+  /* border-left: 1px solid #e6ecf1;
+  border-left-color: rgb(230, 236, 241); */
   color: #9DAAB6;
 }
 
@@ -301,8 +314,8 @@ pre {
 
 .rightSideBarUL li {
   list-style-type: none;
-  border-left: 1px solid #e6ecf1;
-  border-left-color: rgb(230, 236, 241);
+  /* border-left: 1px solid #e6ecf1;
+  border-left-color: rgb(230, 236, 241); */
 }
 
 .rightSideBarUL li a {
@@ -322,12 +335,12 @@ pre {
   z-index: 1;
 }
 
-.hideFrontLine  .active >a{
-  background-color: #542683;
-  color: #fff !important;
+.hideFrontLine .active > a{
+  /* background-color: #542683; */
+  color: #344abd !important;
 }
 .firstLevel ul li .collapser svg path {
-  fill: #fff !important;
+  fill: #76787C !important;
 }
 .active .collapser >svg >path {
   fill: #663399 !important;
@@ -342,7 +355,7 @@ pre {
   padding: 0;
 }
 .sideBarUL .item >a {
-  color: #fff;
+  color: #76787C;
   text-decoration: none;
   display: inline-block;
   position: relative;
@@ -351,14 +364,14 @@ pre {
   padding-left: 15px;
 }
 .sideBarUL .item>a:hover {
-  background-color: #542683;
-  color: #fff !important;
+  /* background-color: #542683; */
+  color: #344abd !important;
 }
 .showFrontLine .item >a:hover {
   background-color: #542683;
 }
 .showFrontLine .active >a {
-  color: #fff;
+  color: #344abd;
   background-color: #473485;
 }
 
@@ -390,7 +403,7 @@ pre {
   display: flex;
   align-items: center;
   padding-bottom: 40px;
-  border-bottom: 1px solid rgb(230, 236, 241);
+  border-bottom: 1px solid #76787C;
   margin-bottom: 32px;
 }
 
@@ -398,7 +411,7 @@ pre {
   font-size: 32px;
   line-height: 1.5;
   font-weight: 500;
-  border-left: 2px solid rgb(116, 76, 188);
+  border-left: 2px solid #344abd;
   padding: 0 16px;
   flex: 1;
   margin-top: 0;
@@ -538,13 +551,13 @@ pre {
 }
 
 .nextBtn:hover, .previousBtn:hover {
-  color: rgb(116, 76, 188);
+  color: #344abd;
   text-decoration: none;
-  border: 1px solid rgb(116, 76, 188);
+  border: 1px solid #344abd;
 }
 
 .nextBtn:hover .rightArrow, .previousBtn:hover .leftArrow {
-  color: rgb(116, 76, 188);
+  color: #344abd;
 }
 
 /* tables.css */
