--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -9,7 +9,37 @@
 body {
   font-family: 'Roboto';
   background-color: #F5F7FB;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
+
+/* p {
+  font-size: 16px;
+}
+
+h1 {
+  font-size: 3rem;
+}
+
+h2 {
+  font-size: 2.25rem;
+}
+
+h3 {
+  font-size: 1.875rem;
+}
+
+h4 {
+  font-size: 1.5rem;
+}
+
+h5 {
+  font-size: 1.25rem;
+}
+
+h6 {
+  font-size: 1.125rem;
+} */
 
 .video-responsive {
   position: relative;
