--- a/src/templates/docs-styles.css
+++ b/src/templates/docs-styles.css
@@ -1,4 +1,4 @@
-.markdown-body * {
+.markdown-body {
     color: #4a5568 !important;
     font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,Noto Sans,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol,Noto Color Emoji;
     -webkit-font-smoothing: antialiased;
@@ -157,13 +157,14 @@ ins:hover::after {
 
 table {
     width: max-content;
+    max-width: 100%;
     margin: auto;
     margin-top: 2rem;
     margin-bottom: 2rem;
 }
 
 table tr td {
-    min-width: 200px;
+    /* min-width: 200px; */
 }
 
 table tr:nth-child(2n) {
@@ -172,4 +173,12 @@ table tr:nth-child(2n) {
 
 table tr th, table tr td {
     border: 1px solid #cbd5e0;
+}
+
+table tr td var {
+    color: #805ad5 !important;
+}
+
+em:hover {
+    font-style: normal;
 }
