fixed searchbar width

--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -714,6 +714,9 @@ img {
   #navbar {
     width: 100%;
   }
+  .searchbar {
+    width: 100vw;
+  }
   .navBarULRight {
     position: static;
   }
