--- a/src/templates/docs-styles.css
+++ b/src/templates/docs-styles.css
@@ -168,7 +168,7 @@ table {
     margin-bottom: 2rem;
 }
 
-table tr td {
+table tr td:nth-child(1) {
     /* min-width: 200px; */
 }
 
@@ -182,6 +182,11 @@ table tr th, table tr td {
 
 table tr td var {
     color: #805ad5 !important;
+}
+
+.arabic-alphabet tbody tr td:nth-child(1), .arabic-alphabet tbody tr td:nth-child(2), .arabic-alphabet tbody tr td:nth-child(3), .arabic-alphabet tbody tr td:nth-child(4) {
+    font-size: 30px;
+    text-align: center;
 }
 
 em:hover {
