--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -1,45 +1,14 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:300,400,500,700');
-
 @tailwind base;
-
 @tailwind components;
-
 @tailwind utilities;
 
 body {
   font-family: 'Roboto';
-  background-color: #F5F7FB;
+  background-color:#f7fafc;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
-/* p {
-  font-size: 16px;
-}
-
-h1 {
-  font-size: 3rem;
-}
-
-h2 {
-  font-size: 2.25rem;
-}
-
-h3 {
-  font-size: 1.875rem;
-}
-
-h4 {
-  font-size: 1.5rem;
-}
-
-h5 {
-  font-size: 1.25rem;
-}
-
-h6 {
-  font-size: 1.125rem;
-} */
 
 .video-responsive {
   position: relative;
@@ -60,22 +29,20 @@ h6 {
   color: red;
   background-color: #ffcccc;
 }
-.navBarParent
-{
-  width: 100%;
+.navBarParent {
+  /* width: 100%;
   float: left;
   display: flex;
-  align-items: center;
+  align-items: center; */
 }
-.divider
-{
+.divider {
   height: 30px;
   margin: 0 15px;
   border-right: 1px solid rgba(255, 255, 255, 0.3);
 }
 .navBarULRight {
-  /* position: absolute;
-  right: 30px; */
+  /* position: absolute; */
+  /* right: 30px; */
 }
 .githubIcon {
   width: 15px;
@@ -113,8 +80,7 @@ h6 {
   display: flex;
   align-items: center;
 }
-.formElement
-{
+.formElement {
   background-color: transparent;
   padding: 4px;
   /* border-radius: 4px; */
@@ -128,7 +94,7 @@ h6 {
   fill: #fff;
 }
 #navbar {
-  width: 335px;
+  /* width: 335px; */
   padding-right: 0;
 }
 .searchInput {
@@ -142,32 +108,33 @@ h6 {
   border: 0;
 }
 .searchWrapper {
-  padding-left: 0px;
+  /* padding-left: 0px; */
   /* padding-right: 20px; */
   /* flex: 1; */
   /* max-width: 600px; */
-  position: relative;
-  min-width: 600px;
-  width: max-content;
-  margin: auto;
+  /* position: relative; */
+  /* min-width: 600px; */
+  /* width: max-content; */
+  /* margin: auto; */
 }
 .searchWrapper a {
   font-weight: 500;
 }
 .hitWrapper {
-  background-color: #fff;
+  /* background-color: #fff; */
   /* padding: 4px; */
   border-radius: 4px;
-  position: absolute;
-  width: 600px;
-  max-width: 600px;
+  /* position: absolute; */
+  /* width: 600px; */
+  /* max-width: 600px; */
   /* top: 40px; */
   border: 1px solid #ccc;
   box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.16);
-  height: auto;
+  /* height: auto; */
   max-height: 80vh;
-  overflow: scroll;
-  left: 0;
+  /* overflow: scroll; */
+  /* left: 0; */
+  width: max-content;
 }
 .showResults {
   display: block;
@@ -224,33 +191,33 @@ h6 {
 
 /* Header section starts here */
 .navBarDefault {
-  background-color: #F5F7FB;
-  border-radius: 0;
-  border-top: 0;
-  margin-bottom: 0;
-  border: 0;
-  display: flex;
-  align-items: center;
+  /* background-color: #F5F7FB; */
+  /* border-radius: 0; */
+  /* border-top: 0; */
+  /* margin-bottom: 0; */
+  /* border: 0; */
+  /* display: flex; */
+  /* align-items: center; */
   /* box-shadow: -1px 0px 4px 1px rgba(175,158,232,.4);
   -webkit-box-shadow: -1px 0px 4px 1px rgba(175,158,232,.4);
   -moz-box-shadow: -1px 0px 4px 1px rgba(175,158,232,.8);
   -o-box-shadow: -1px 0px 4px 1px rgba(175,158,232,.4); */
   z-index: 1;
-  padding: 15px;
+  /* padding: 15px; */
 }
 .navBarHeader {
-  min-width: 335px;
+  /* min-width: 335px; */
   /* padding-right: 20px; */
 }
 .navBarBrand {
-  height: auto;
+  /* height: auto; */
   font-size: 28px;
-  line-height: 1.5;
-  font-weight: 500;
+  /* line-height: 1.5; */
+  /* font-weight: 500; */
   color: #344abd !important;
-  padding: 0px 0px;
-  display: flex;
-  align-items: center;
+  /* padding: 0px 0px; */
+  /* display: flex; */
+  /* align-items: center; */
 
 }
 
@@ -328,7 +295,7 @@ pre {
 }
 
 .sideBarUL {
-  margin-top: 32px;
+  /* margin-top: 32px; */
 }
 
 .sideBarUL li {
@@ -351,9 +318,9 @@ pre {
 
 .rightSideTitle {
   font-size: 10px;
-  line-height: 1;
-  font-weight: 700;
-  text-transform: uppercase;
+  /* line-height: 1; */
+  /* font-weight: 700; */
+  /* text-transform: uppercase; */
   letter-spacing: 1.2px;
   padding: 7px 24px 7px 16px;
   /* border-left: 1px solid #e6ecf1;
@@ -362,12 +329,12 @@ pre {
 }
 
 .rightSideBarUL {
-  margin-top: 32px;
+  /* margin-top: 32px; */
   /* width: 298px; */
 }
 
 .rightSideBarUL li {
-  list-style-type: none;
+  /* list-style-type: none; */
   /* border-left: 1px solid #e6ecf1;
   border-left-color: rgb(230, 236, 241); */
 }
@@ -490,9 +457,9 @@ pre {
 }
 
 .nextPreviousWrapper {
-  margin: 0px;
-  padding: 0px;
-  width: auto;
+  /* margin: 0px; */
+  /* padding: 0px; */
+  /* width: auto; */
   display: grid;
   grid-template-rows: auto;
   column-gap: 24px;
@@ -500,49 +467,49 @@ pre {
 }
 
 .previousBtn {
-  cursor: pointer;
+  /* cursor: pointer; */
   -moz-box-align: center;
   -moz-box-direction: normal;
   -moz-box-orient: horizontal;
-  margin: 0px;
-  padding: 0px;
-  position: relative;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
+  /* margin: 0px; */
+  /* padding: 0px; */
+  /* position: relative; */
+  /* display: flex; */
+  /* flex-direction: row; */
+  /* align-items: center; */
   place-self: stretch;
   color: rgb(36, 42, 49);
-  background-color: rgb(255, 255, 255);
+  /* background-color: rgb(255, 255, 255); */
   border-radius: 3px;
   border: 1px solid rgb(230, 236, 241);
   transition: border 200ms ease 0s;
   box-shadow: rgba(116, 129, 141, 0.1) 0px 3px 8px 0px;
-  text-decoration: none;
+  /* text-decoration: none; */
 }
 
 .leftArrow {
-  display: block;
-  margin: 0px;
+  /* display: block; */
+  /* margin: 0px; */
   color: rgb(157, 170, 182);
   flex: 0 0 auto;
   font-size: 24px;
   transition: color 200ms ease 0s;
-  padding: 16px;
-  padding-right: 16px;
+  /* padding: 16px; */
+  /* padding-right: 16px; */
 }
 
 .preRightWrapper {
-  display: block;
-  margin: 0px;
-  flex: 1 1 0%;
-  padding: 16px;
-  text-align: right;
+  /* display: block; */
+  /* margin: 0px; */
+  /* flex: 1 1 0%; */
+  /* padding: 16px; */
+  /* text-align: right; */
 }
 
 .smallContent {
-  display: block;
-  margin: 0px;
-  padding: 0px;
+  /* display: block; */
+  /* margin: 0px; */
+  /* padding: 0px; */
   color: rgb(157, 170, 182);
 }
 
@@ -553,9 +520,9 @@ pre {
 }
 
 .nextPreviousTitle {
-  display: block;
-  margin: 0px;
-  padding: 0px;
+  /* display: block; */
+  /* margin: 0px; */
+  /* padding: 0px; */
   transition: color 200ms ease 0s;
 }
 
@@ -566,47 +533,47 @@ pre {
 }
 
 .nextBtn {
-  cursor: pointer;
+  /* cursor: pointer; */
   -moz-box-align: center;
   -moz-box-direction: normal;
   -moz-box-orient: horizontal;
-  margin: 0px;
-  padding: 0px;
-  position: relative;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
+  /* margin: 0px; */
+  /* padding: 0px; */
+  /* position: relative; */
+  /* display: flex; */
+  /* flex-direction: row; */
+  /* align-items: center; */
   place-self: stretch;
   color: rgb(36, 42, 49);
-  background-color: rgb(255, 255, 255);
+  /* background-color: rgb(255, 255, 255); */
   border-radius: 3px;
   border: 1px solid rgb(230, 236, 241);
   transition: border 200ms ease 0s;
   box-shadow: rgba(116, 129, 141, 0.1) 0px 3px 8px 0px;
-  text-decoration: none;
+  /* text-decoration: none; */
 }
 
 .rightArrow {
   flex: 0 0 auto;
   font-size: 24px;
   transition: color 200ms ease 0s;
-  padding: 16px;
-  padding-left: 16px;
-  display: block;
-  margin: 0px;
+  /* padding: 16px; */
+  /* padding-left: 16px; */
+  /* display: block; */
+  /* margin: 0px; */
   color: rgb(157, 170, 182);
 }
 
 .nextRightWrapper {
-  display: block;
-  margin: 0px;
-  padding: 16px;
-  flex: 1 1 0%;
+  /* display: block; */
+  /* margin: 0px; */
+  /* padding: 16px; */
+  /* flex: 1 1 0%; */
 }
 
 .nextBtn:hover, .previousBtn:hover {
   color: #344abd;
-  text-decoration: none;
+  /* text-decoration: none; */
   border: 1px solid #344abd;
 }
 
@@ -616,34 +583,41 @@ pre {
 
 /* tables.css */
 table {
-padding: 0; }
+  padding: 0; 
+}
 
 table tr {
   border-top: 1px solid #cccccc;
   background-color: white;
   margin: 0;
-padding: 0; }
+  padding: 0; 
+}
 
 table tr:nth-child(2n) {
-  background-color: #f8f8f8; }
+  background-color: #f8f8f8; 
+}
 
 table tr th {
   font-weight: bold;
   border: 1px solid #cccccc;
   text-align: left;
   margin: 0;
-padding: 6px 13px; }
+  padding: 6px 13px; 
+}
 
 table tr td {
   border: 1px solid #cccccc;
   margin: 0;
-padding: 6px 13px; }
+  padding: 6px 13px; 
+}
 
 table tr th :first-child, table tr td :first-child {
-margin-top: 0; }
+  margin-top: 0; 
+}
 
 table tr th :last-child, table tr td :last-child {
-margin-bottom: 0; }
+  margin-bottom: 0; 
+}
 /* end - tables.css */
 
 /* Image styling */
@@ -671,8 +645,7 @@ img {
   display: flex;
   align-items: center;
 }
-.authorImg img
-{
+.authorImg img {
   width: 75px;
   height: 75px;
   border-radius: 50%;
@@ -681,12 +654,10 @@ img {
   min-height: 75px;
   max-height: 75px;
 }
-.authorDetails
-{
+.authorDetails {
   padding-left: 10px;
 }
-.authorDesc
-{
+.authorDesc {
   padding-top: 5px;
   font-size: 14px;
 }
