--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -29,20 +29,10 @@ body {
   color: red;
   background-color: #ffcccc;
 }
-.navBarParent {
-  /* width: 100%;
-  float: left;
-  display: flex;
-  align-items: center; */
-}
 .divider {
   height: 30px;
   margin: 0 15px;
   border-right: 1px solid rgba(255, 255, 255, 0.3);
-}
-.navBarULRight {
-  /* position: absolute; */
-  /* right: 30px; */
 }
 .githubIcon {
   width: 15px;
@@ -83,7 +73,6 @@ body {
 .formElement {
   background-color: transparent;
   padding: 4px;
-  /* border-radius: 4px; */
   border-bottom: 1px solid rgba(255, 255, 255, 0.3);
 }
 .formElement:focus {
@@ -94,7 +83,6 @@ body {
   fill: #fff;
 }
 #navbar {
-  /* width: 335px; */
   padding-right: 0;
 }
 .searchInput {
@@ -103,37 +91,18 @@ body {
   border-width: 0 !important;
   color: rgba(255, 255, 255, 0.5);
 }
-.searchInput:focus, .searchInput:visited, .searchInput:hover, .searchInput:focus-within {
+/* .searchInput:focus, .searchInput:visited, .searchInput:hover, .searchInput:focus-within {
   outline: none;
   border: 0;
-}
-.searchWrapper {
-  /* padding-left: 0px; */
-  /* padding-right: 20px; */
-  /* flex: 1; */
-  /* max-width: 600px; */
-  /* position: relative; */
-  /* min-width: 600px; */
-  /* width: max-content; */
-  /* margin: auto; */
-}
+} */
 .searchWrapper a {
   font-weight: 500;
 }
 .hitWrapper {
-  /* background-color: #fff; */
-  /* padding: 4px; */
   border-radius: 4px;
-  /* position: absolute; */
-  /* width: 600px; */
-  /* max-width: 600px; */
-  /* top: 40px; */
   border: 1px solid #ccc;
   box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.16);
-  /* height: auto; */
   max-height: 80vh;
-  /* overflow: scroll; */
-  /* left: 0; */
   width: max-content;
 }
 .showResults {
@@ -145,12 +114,12 @@ body {
 .ais-Hits-item {
   padding: 5px;
   padding-left: 15px;
+  height: 1rem;
 }
 .ais-Hits-item:hover {
   background-color: #f7fafc;
 }
 .hitWrapper span {
-  /* color: black; */
   font-size: 14px;
   line-height: 2;
   font-weight: normal;
@@ -191,34 +160,11 @@ body {
 
 /* Header section starts here */
 .navBarDefault {
-  /* background-color: #F5F7FB; */
-  /* border-radius: 0; */
-  /* border-top: 0; */
-  /* margin-bottom: 0; */
-  /* border: 0; */
-  /* display: flex; */
-  /* align-items: center; */
-  /* box-shadow: -1px 0px 4px 1px rgba(175,158,232,.4);
-  -webkit-box-shadow: -1px 0px 4px 1px rgba(175,158,232,.4);
-  -moz-box-shadow: -1px 0px 4px 1px rgba(175,158,232,.8);
-  -o-box-shadow: -1px 0px 4px 1px rgba(175,158,232,.4); */
   z-index: 1;
-  /* padding: 15px; */
-}
-.navBarHeader {
-  /* min-width: 335px; */
-  /* padding-right: 20px; */
 }
 .navBarBrand {
-  /* height: auto; */
   font-size: 28px;
-  /* line-height: 1.5; */
-  /* font-weight: 500; */
   color: #344abd !important;
-  /* padding: 0px 0px; */
-  /* display: flex; */
-  /* align-items: center; */
-
 }
 
 .navBarBrand img {
@@ -234,14 +180,13 @@ body {
   font-weight: 500;
   line-height: 1em;
   opacity: 1;
+  padding: 1rem;
 }
-.navBarNav
-{
+.navBarNav {
   display: flex;
   align-items: center;
 }
-.navBarUL li a img, .navBarUL li a .shareIcon
-{
+.navBarUL li a img, .navBarUL li a .shareIcon {
   width: 20px;
 }
 .mainWrapper {
@@ -294,10 +239,6 @@ pre {
   width: 40px;
 }
 
-.sideBarUL {
-  /* margin-top: 32px; */
-}
-
 .sideBarUL li {
   list-style-type: none;
   width: auto;
@@ -318,25 +259,9 @@ pre {
 
 .rightSideTitle {
   font-size: 10px;
-  /* line-height: 1; */
-  /* font-weight: 700; */
-  /* text-transform: uppercase; */
   letter-spacing: 1.2px;
   padding: 7px 24px 7px 16px;
-  /* border-left: 1px solid #e6ecf1;
-  border-left-color: rgb(230, 236, 241); */
   color: #9DAAB6;
-}
-
-.rightSideBarUL {
-  /* margin-top: 32px; */
-  /* width: 298px; */
-}
-
-.rightSideBarUL li {
-  /* list-style-type: none; */
-  /* border-left: 1px solid #e6ecf1;
-  border-left-color: rgb(230, 236, 241); */
 }
 
 .rightSideBarUL li a {
@@ -357,7 +282,6 @@ pre {
 }
 
 .hideFrontLine .active > a{
-  /* background-color: #542683; */
   color: #344abd !important;
 }
 .firstLevel ul li .collapser svg path {
@@ -385,7 +309,6 @@ pre {
   padding-left: 15px;
 }
 .sideBarUL .item>a:hover {
-  /* background-color: #542683; */
   color: #344abd !important;
 }
 .showFrontLine .item >a:hover {
@@ -457,9 +380,6 @@ pre {
 }
 
 .nextPreviousWrapper {
-  /* margin: 0px; */
-  /* padding: 0px; */
-  /* width: auto; */
   display: grid;
   grid-template-rows: auto;
   column-gap: 24px;
@@ -467,49 +387,24 @@ pre {
 }
 
 .previousBtn {
-  /* cursor: pointer; */
   -moz-box-align: center;
   -moz-box-direction: normal;
   -moz-box-orient: horizontal;
-  /* margin: 0px; */
-  /* padding: 0px; */
-  /* position: relative; */
-  /* display: flex; */
-  /* flex-direction: row; */
-  /* align-items: center; */
   place-self: stretch;
   color: rgb(36, 42, 49);
-  /* background-color: rgb(255, 255, 255); */
   border-radius: 3px;
   border: 1px solid rgb(230, 236, 241);
   transition: border 200ms ease 0s;
   box-shadow: rgba(116, 129, 141, 0.1) 0px 3px 8px 0px;
-  /* text-decoration: none; */
 }
 
 .leftArrow {
-  /* display: block; */
-  /* margin: 0px; */
   color: rgb(157, 170, 182);
   flex: 0 0 auto;
   font-size: 24px;
   transition: color 200ms ease 0s;
-  /* padding: 16px; */
-  /* padding-right: 16px; */
 }
-
-.preRightWrapper {
-  /* display: block; */
-  /* margin: 0px; */
-  /* flex: 1 1 0%; */
-  /* padding: 16px; */
-  /* text-align: right; */
-}
-
 .smallContent {
-  /* display: block; */
-  /* margin: 0px; */
-  /* padding: 0px; */
   color: rgb(157, 170, 182);
 }
 
@@ -520,9 +415,6 @@ pre {
 }
 
 .nextPreviousTitle {
-  /* display: block; */
-  /* margin: 0px; */
-  /* padding: 0px; */
   transition: color 200ms ease 0s;
 }
 
@@ -533,47 +425,26 @@ pre {
 }
 
 .nextBtn {
-  /* cursor: pointer; */
   -moz-box-align: center;
   -moz-box-direction: normal;
   -moz-box-orient: horizontal;
-  /* margin: 0px; */
-  /* padding: 0px; */
-  /* position: relative; */
-  /* display: flex; */
-  /* flex-direction: row; */
-  /* align-items: center; */
   place-self: stretch;
   color: rgb(36, 42, 49);
-  /* background-color: rgb(255, 255, 255); */
   border-radius: 3px;
   border: 1px solid rgb(230, 236, 241);
   transition: border 200ms ease 0s;
   box-shadow: rgba(116, 129, 141, 0.1) 0px 3px 8px 0px;
-  /* text-decoration: none; */
 }
 
 .rightArrow {
   flex: 0 0 auto;
   font-size: 24px;
   transition: color 200ms ease 0s;
-  /* padding: 16px; */
-  /* padding-left: 16px; */
-  /* display: block; */
-  /* margin: 0px; */
   color: rgb(157, 170, 182);
-}
-
-.nextRightWrapper {
-  /* display: block; */
-  /* margin: 0px; */
-  /* padding: 16px; */
-  /* flex: 1 1 0%; */
 }
 
 .nextBtn:hover, .previousBtn:hover {
   color: #344abd;
-  /* text-decoration: none; */
   border: 1px solid #344abd;
 }
 
@@ -705,7 +576,8 @@ img {
 
   .navBarUL li a {
     font-size: 14px;
-    padding: 10px 10px;
+    /* padding: 10px 10px; */
+    padding: 1rem;
   }
 
   .navBarDefault {
@@ -798,7 +670,8 @@ img {
     max-width: 500px;
   }
   .navBarUL li a {
-    padding: 10px 5px;
+    /* padding: 10px 5px; */
+    padding: 1rem;
   }
   .searchWrapper {
     padding-left: 0px;
