--- a/src/templates/docs-styles.css
+++ b/src/templates/docs-styles.css
@@ -1,6 +1,7 @@
 .markdown-body {
     color: #4a5568 !important;
-    font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,Noto Sans,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol,Noto Color Emoji;
+    /* font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,Noto Sans,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol,Noto Color Emoji; */
+    font-family: 'Arial' !important;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
@@ -9,15 +10,23 @@
     background: #e2e8f0;
 }
 
-.markdown-body .mainWrapper * {
+/* .markdown-body .mainWrapper * {
     line-height: 2rem;
-}
+} */
 
 .markdown-body * b, .markdown-body * strong {
     font-weight: 600 !important;
 }
 
-.markdown-body p {
+.markdown-body .card {
+    line-height: 1;
+}
+
+.markdown-body .card p {
+    margin: 0;
+}
+
+.markdown-body :not(.card p) p {
     font-size: 16px;
     margin: 0;
     padding: 0;
