--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:300,400,500,700');
+@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,200i,300,300i,400,400i,600,600i,700,700i&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
